03-03-2021: + changes in codebook: added idea with two dfs + modified .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .Rhistory
 .RData
 .Ruserdata
+BergErdda_leftJoin.RData
+README.html
+filterBergmann.RData
+hausarbeit.html
+hausarbeit.pdf
+ownCodebook.nb.html
