10-03-2021: + renamed all the relevant vars in joined df + estimated models for vars of groups structure, institutions, preferences and bargaining environment + best fit model: estimated via stepAIC + small .gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ Rplot01.pdf
 workWithCPD.R
 erdda2014-Bergmann2019_merged.dta
 combo.RData
+Untitled.RData
+svm-latex-article2.tex
+hausarbeit.pdf
+hausarbeit.tex
