15-03-2021: + added more text + modified models: AIC for each model included, correlation matrices updated (with na.omit), better heatmaps + additions in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Untitled.RData
 svm-latex-article2.tex
 hausarbeit.pdf
 hausarbeit.tex
+sbAll.RData
+correlation_heatmap_sbAll.png
+BergmannERDDA.f.RData
